--- a/game.project
+++ b/game.project
@@ -12,7 +12,7 @@ main_collection = /main/main.collectionc
 render = /mcs.renderc
 
 [input]
-game_binding = /input/game.input_bindingc
+game_binding = /builtins/input/all.input_bindingc
 use_accelerometer = 0
 
 [display]
